# DEEvalSports

./: .directory  .~lock.Data engineer recruitment take-home exercise.docx#  Data engineer recruitment take-home exercise.docx  README.md  deeval-dashboard.pbix  exercise.html  exercise.ipynb  pyproject.toml
data/: .directory  Formations.csv  MatchEvents.csv  Matches.csv  People.csv  PlayByPlay.csv  TrainingBreakdown.csv  TrainingEvents.csv  TrainingSessions.csv
notebooks/: exercise.ipynb
