[tool.poetry]
name = "DEEvalSports"
version = "0.1.0"
description = "Data Engineering role takehome"
authors = ["jsmccid <jxmccarthy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.1.10"
plotly = "^5.3.1"
ipywidgets = "^7.6.4"
pandas = "^1.3.2"
requests = "^2.26.0"
gsutil = "^5.3"
gcloud = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
